# OpcUaUnitTesting

./: .gitignore  README.md  TestImportFile.py  setup.cfg  setup.py
OpcUaUnitTesting/: OpcUaUnitTesting.py  OpcUaUnitTesting_Log.txt  TestImportFile.py  __init__.py
OpcUaUnitTesting/Examples/WaterHeaterExample1/: Inputs.csv
OpcUaUnitTesting/config/: Inputs.csv  Inputs.xml  VarsToGet.csv  VarsToSet.csv
tests/: DeleteCompletedTestData.bat
tests/!TestAsProj/: TestAsProj.apj
tests/!TestAsProj/Logical/: Global.typ  Global.var  Package.pkg  Project.language
tests/!TestAsProj/Logical/Alarms/: Main.st  Variables.var
tests/!TestAsProj/Logical/Audit/: Main.st  Variables.var
tests/!TestAsProj/Logical/BasicTest/: Main.st  Variables.var
tests/!TestAsProj/Logical/GetInfo/: Main.st  Types.typ  Variables.var
tests/!TestAsProj/Physical/: Physical.pkg
tests/!TestTemplate/: CorrectOutput.csv  Inputs.csv
tests/BasicTest1/: CorrectOutput.csv  Inputs.csv  Output.csv
tests/CheckRangeTest1/: CorrectOutput.csv  Inputs.csv
tests/CheckRangeTest2/: CorrectOutput.csv  Inputs.csv
tests/IncorrectInputTest1/: Inputs.csv
tests/IncorrectInputTest2/: CorrectOutput.csv  Inputs.csv
tests/IncorrectInputTest3/: CorrectOutput.csv  Inputs.csv
tests/IncorrectInputTest4/: CorrectOutput.csv  Inputs.csv
tests/IncorrectInputTest5/: CorrectOutput.csv  Inputs.csv
tests/IncorrectInputTest6/: CorrectOutput.csv  Inputs.csv
tests/TestAsProj/: TestAsProj.apj
tests/TestAsProj/Logical/: Global.typ  Global.var  Package.pkg
tests/TestAsProj/Physical/: Physical.pkg
(+97 files in other folders)
