[metadata]
name = OpcUaUnitTesting
version = 0.1
author = Marcus Mangel
author_email = marcus.mangel@br-automation.com
description = Read and write variables on a B&R PLC using OPC-UA for the purpose of unit testing a project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcusbnr/OpcUaUnitTesting
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.9
include_package_data = True
